--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
-.App {
+body {
   text-align: center;
+  background-color: #282c34;
+}
+
+.App {
+  /* min-height: 100vh; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  /* font-size: calc(10px + 2vmin); */
+  color: white;
 }
 
 .App-logo {
@@ -14,14 +25,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+  /* background-color: #282c34;
+  /* min-height: 100vh; */
+  /* display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: center;  */
   font-size: calc(10px + 2vmin);
-  color: white;
+  /* color: white; */
 }
 
 .App-link {
@@ -32,7 +43,84 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
+}
+
+.record-viewer-parent {
+  display: flex;
+  align-content: space-evenly;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 32px;
+}
+
+
+.record-viewer-standard-set {
+  display: flex;
+  align-content: space-evenly;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 32px;
+}
+
+.record-viewer-standard {
+  border: 1px solid silver;
+  font-size: 12px;
+  text-align: left;
+  border-radius: 3px;
+  margin: 6px;
+  padding: 0px 24px 12px;
+  width: 150px;
+}
+
+.record-viewer-record-holder {
+  border: 5px solid silver;
+  font-size: 12px;
+  text-align: left;
+  border-radius: 3px;
+  margin: 6px;
+  padding: 0px 24px 12px;
+  width: 200px;
+}
+
+.record-viewer-record-current {
+  border: 5px solid gold;
+}
+
+.record-viewer-record-unbeaten {
+  background-color: #444444;
+}
+
+.record-viewer-record-title {
+  color: gold;
+}
+
+.record-viewer-parent p {
+  margin: 0px 0px;
+  padding: 2px 0px;
+}
+
+.record-viewer-record-header {
+  border-bottom: 1px solid silver;
+  padding: 12px 0 0 0;
+}
+
+.record-viewer-view-link {
+  color: silver;
+  margin-top: 6px;
+}
+
+.records-viewer-loading-container {
+  display: flex;
+  justify-content: center;
+  padding: 100px;
+}
+
+.records-viewer-content-spinner {
+  display: flex;
+  justify-content: center;
+  padding: 24px;
 }
