--- a/src/App.css
+++ b/src/App.css
@@ -25,14 +25,13 @@ body {
 }
 
 .App-header {
-  /* background-color: #282c34;
-  /* min-height: 100vh; */
-  /* display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;  */
   font-size: calc(10px + 2vmin);
-  /* color: white; */
+    display: flex;
+    align-items: center;
+    margin: 45px;
+}
+.header-logo {
+  padding-right: 25px;
 }
 
 .App-link {
@@ -47,6 +46,14 @@ body {
   to {
     transform: rotate(360deg);
   }
+}
+
+.record-viewer-options-bar {
+
+    display: block;
+    width: 100%;
+    border: 1px solid lightgray;
+    padding: 15px;
 }
 
 .record-viewer-parent {
