--- a/src/App.css
+++ b/src/App.css
@@ -1,72 +1,58 @@
+:root {
+  --main-background-color: #282c34;
+  --main-text-color: #ffffff;
+  --main-border-color: silver;
+  --main-accent-color: gold;
+  --soft-border-color: #666666;
+}
+
 body {
   text-align: center;
-  background-color: #282c34;
+  background-color: var(--main-background-color);
 }
 
 .App {
-  /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* font-size: calc(10px + 2vmin); */
-  color: white;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+  color: var(--main-text-color);
+    min-width: 1000px;
 }
 
 .App-header {
   font-size: calc(10px + 2vmin);
-    display: flex;
-    align-items: center;
-    margin: 45px;
+  display: flex;
+  align-items: center;
+  margin: 20px;
+  padding-top: 10px;
 }
+
 .header-logo {
   padding-right: 25px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
 .header-button {
   padding: 10px;
-    margin: 0px 8px;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
+  margin: 0px 8px;
 }
 
 .record-viewer-options-bar {
-    display: block;
-    width: 100%;
-    border: 1px solid lightgray;
-    padding: 15px;
-    margin-bottom: 25px;
-    font-style: italic;
+  display: block;
+  width: 100%;
+  border: 1px solid var(--main-border-color);
+    border-width: 1px 0;
+  padding: 15px;
+  margin-bottom: 25px;
+  font-style: italic;
+    padding-right: 100px;
 }
 
 .record-viewer-parent {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: left;
-    margin-bottom: 32px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: left;
+  margin-bottom: 32px;
 }
 
 .record-group-title {
@@ -79,34 +65,38 @@ body {
   flex-wrap: wrap;
   margin-bottom: 15px;
 }
+
 .current-leaders-group {
-  min-width:525px;
-  width:45%;
+  min-width: 525px;
+  width: 45%;
   text-align: center;
-  display:inline-block;
-    border-right: 1px solid #666666;
-    padding: 0 50px 0 25px;
-    margin-right:30px;
+  display: inline-block;
+  border-right: 1px solid var(--soft-border-color);
+  padding: 0 50px 0 25px;
+  margin-right: 30px;
 }
 
 .combined-history-group {
-  display:inline-block;
+  display: inline-block;
   width: 50%;
   padding-left: 20px;
   text-align: left;
+  min-width: 300px;
 }
+
 .record-viewer-standard {
-  border: 1px solid silver;
+  border: 1px solid var(--main-border-color);
   font-size: 12px;
   text-align: left;
   border-radius: 3px;
-  margin: 6px;
+  box-sizing: border-box;
+  margin-right: 3%;
   padding: 0px 24px 12px;
-  width: 150px;
+  width: 30%;
 }
 
 .record-viewer-record-holder {
-  border: 5px solid silver;
+  border: 5px solid var(--main-border-color);
   font-size: 12px;
   text-align: left;
   border-radius: 3px;
@@ -117,7 +107,7 @@ body {
 
 .combined-history-group .record-viewer-record-holder {
   width: 200px;
-  border: 1px solid silver;
+  border: 1px solid var(--main-border-color);
 }
 
 .combined-history-group .record-viewer-columns {
@@ -129,116 +119,116 @@ body {
 }
 
 .combined-history-group .record-viewer-columns p {
-    display: block;
-    width: auto;
-    text-align: left;
-    text-overflow: ellipsis;
-    text-wrap: nowrap;
-    overflow: hidden;
+  display: block;
+  width: auto;
+  text-align: left;
+  text-overflow: ellipsis;
+  text-wrap: nowrap;
+  overflow: hidden;
 }
 
 .record-viewer-record-current {
-  border: 5px solid gold;
-}
-
-.record-viewer-record-unbeaten {
-  background-color: #444444;
+  border: 5px solid var(--main-accent-color);
 }
 
 .record-viewer-ranking {
-    background-color: gold;
-    color: black;
-    display: inline-block;
-    width: 20px;
-    border-radius: 50%;
-    height: 20px;
-    line-height: 20px;
-    margin-right: 7px;
-    border: 1px solid black;
+  background-color: var(--main-accent-color);
+  color: black;
+  display: inline-block;
+  width: 20px;
+  border-radius: 50%;
+  height: 20px;
+  line-height: 20px;
+  margin-right: 7px;
+  border: 1px solid black;
 }
 
 .record-viewer-standards-parent {
   padding-bottom: 0;
   margin-bottom: 45px;
-  border-bottom: 1px solid silver;
+  border-bottom: 1px solid var(--main-border-color);
 }
 
 .record-group-info {
   /* padding: 0 25px; */
-  text-align:left;
+  text-align: left;
   padding-left: 5px;
 }
+
 .record-group-description {
-    /* text-align: center; */
-    font-size: 12px;
-    font-style: italic;
+  /* text-align: center; */
+  font-size: 12px;
+  font-style: italic;
 }
 
-.combined-history-group 
-.record-group-info {
+.combined-history-group .record-group-info {
   /* padding: 0 100px; */
-    width: 75%;
-    /* text-align: center; */
+  width: 75%;
+  /* text-align: center; */
 }
+
 .combined-history-group .record-group-title {
-    /* text-align: center; */
+  /* text-align: center; */
 }
+
 .combined-history-group .record-viewer-ranking {
   background: transparent;
-  border-color: silver;
-  color: white;
+  border-color: var(--main-border-color);
+  color: var(--main-text-color);
 }
 
 .record-viewer-record-title {
-  color: gold;
+  color: var(--main-accent-color);
   font-weight: bold;
   display: block;
   text-align: center;
 }
+
 .combined-history-group .record-viewer-record-title {
-  color: white;
+  color: var(--main-text-color);
 }
 
 .record-viewer-columns {
   display: flex;
-    column-count: 3;
-    justify-content: space-around;
+  column-count: 3;
+  justify-content: space-around;
 }
 
 .record-viewer-full-width-detail {
-    width: 100%;
-    display: block;
-    text-align: center;
-    font-weight: bold;
-    font-style: italic;
-    line-height: 18px;
-    text-overflow: ellipsis;
-    text-wrap: nowrap;
-    overflow: hidden;
+  width: 100%;
+  display: block;
+  text-align: center;
+  font-weight: bold;
+  font-style: italic;
+  line-height: 18px;
+  text-overflow: ellipsis;
+  text-wrap: nowrap;
+  overflow: hidden;
 }
 
 .record-viewer-columns p {
-    display: inline-flex;
-    width: 150px;
-    text-align: left;
+  display: inline-flex;
+  width: 150px;
+  text-align: left;
 }
+
 .record-viewer-parent p {
   margin: 0px 0px;
   padding: 2px 0px;
 }
 
 .record-viewer-record-header {
-  border-bottom: 1px solid silver;
+  border-bottom: 1px solid var(--main-border-color);
   padding: 12px 0 0 0;
 }
 
 .record-viewer-view-link {
-    color: silver;
-    width: 100%;
-    display: flex;
-    text-align: right;
-    justify-content: end;
-    margin: 0;
+  color: var(--main-border-color);
+  width: 100%;
+  display: flex;
+  text-align: right;
+  justify-content: end;
+  margin: 0;
 }
 
 .records-viewer-loading-container {
@@ -258,22 +248,20 @@ body {
   display: block;
   text-align: left;
   margin-bottom: 10px;
-  padding-left:5px;
+  padding-left: 5px;
 }
 
 .combined-history-group .sort-select-parent {
-    /* width: 75%; */
-    /* text-align: center; */
-
+  /* width: 75%; */
+  /* text-align: center; */
 }
 
 .record-viewer-fine-print {
-
-    font-size: 12px;
-    font-style: italic;
+  font-size: 12px;
+  font-style: italic;
 }
 
 .record-viewer-results-parent {
-    display: flex;
-    padding: 0 75px 0 50px;
+  display: flex;
+  padding: 0 75px 0 50px;
 }
