--- a/src/App.css
+++ b/src/App.css
@@ -98,6 +98,10 @@ right: 50px;
     padding-right: 100px;
 }
 
+.record-viewer-options-bar select {
+  -webkit-appearance: none;
+}
+
 .record-viewer-parent {
   display: flex;
   flex-wrap: wrap;
@@ -117,7 +121,7 @@ right: 50px;
 }
 
 .current-leaders-group {
-  min-width: 525px;
+  min-width: 450px;
   width: 45%;
   text-align: center;
   display: inline-block;
@@ -128,7 +132,7 @@ right: 50px;
 
 .combined-history-group {
   display: inline-block;
-  width: 50%;
+  width: 55%;
   padding-left: 20px;
   text-align: left;
   min-width: 300px;
